--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
